# rollycubes

./: .ccls  .clang-format  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  create-dev-keys  deploy.sh  docker-compose.yml  flake.nix  gen-types  mix.exs  package-lock.json  package.json  run-server.sh  schema.json  schema2.schema  stream_notes.md  system.dot  tasks.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/.devcontainer/: Dockerfile
.github/codeql/: config.yml
.github/workflows/: auth-server-docker.yml  c-cpp.yml  codeql.yml  deploy-auth-server.yml  deploy-auth.yml  deploy-beta.yml  deploy-game.yml  deploy-nginx.yml  deploy-random.yml  deploy-ssh-gateway.yml  deploy.yml  docker-image.yml  graphviz.yml  lint.yml  main.yml  nginx-deploy.yml  node.js.yml  upload-assets.yml
assets/: tailwind.config.js
auth/: .gitignore  Cargo.toml  Dockerfile  achievements.json  badges.json  build.rs  build.sh  docker-compose.yml  ormconfig.json  package-lock.json  package.json  porting_notes.txt  prod.ormconfig.json  start.sh  tasks.toml  tsconfig.json
auth/devdb/: docker-compose.yml
auth/migrations/: V10__donors.sql  V11__payments.sql  V12__pubkeys.sql  V13__pubkey_settings.sql  V14__dice_type_strings.sql  V15__histogram_tracking.sql  V16__bigger_ints.sql  V17__winner_histograms.sql  V1__initial.sql  V2__drop_passwords.sql  V3__snake_case_everything.sql  V4__drop_achievements.sql  V5__default_username.sql  V6__anon_identity.sql  V7__cascades.sql  V8__settings.sql  V9__player_colors.sql
auth/src/: achievements.ts  generated.rs  index.ts  lib.rs  main.rs  routes.ts  server_routes.ts  twitch.ts
auth/src/controller/: UserController.ts
auth/src/entity/: Achievement.ts  PlayerStats.ts  RefreshToken.ts  TwitchIdentity.ts  User.ts  UserToAchievement.ts
auth/src/middleware/: auth.ts  server_auth.ts
auth/src/routes/: server_routes.rs  user_routes.rs  webhook_routes.rs
auth2/: .gitignore  Cargo.toml  achievements.json  porting_notes.txt
auth2/src/: lib.rs  main.rs  migrations.rs
auth2/src/routes/: server_routes.rs  user_routes.rs
client/: .gitignore  index.html  package-lock.json  package.json  tasks.toml  tsconfig.json  vite.config.ts
client/functions/: [[route]].ts  create.ts  list.ts
client/public/: d20.gltf  index.html  level.glb  manifest.json  simulated.txt
client/src/: App.css  App.js  App.tsx  auth.ts  connection.tsx  constants.ts  index.tsx  keycloak.js  react-app-env.d.ts  serviceWorker.ts  setupProxy.js  stitches.config.ts  store.ts  textmods.css  themes.ts  toastify.css  twitch.tsx
client/types/: react-horizontal-scrolling.d.ts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CNAME  README.md  _sidebar.md  gen.md
game/: .ccls  Dockerfile  Makefile  compile_flags.txt  docker-compose.yml  entry.sh  run-server.sh  tasks.toml
game/api/: API.cpp  AchievementClass.hpp  ChatMsg.hpp  DisconnectMsgType.hpp  KickMsg.hpp  KickMsgType.hpp  Player.hpp  RestartMsg.hpp  RollAgainMsg.hpp  RollAgainMsgType.hpp  RollMsg.hpp  UpdateNameMsg.hpp  UpdateTurnMsgType.hpp  UserData.hpp  WelcomeMsgType.hpp  WinMsg.hpp  WinMsgType.hpp
game/includes/: base.h  traits.h
game/src/: API.cpp  API.h  AuthServerRequestQueue.cpp  AuthServerRequestQueue.h  Consts.h  Game.cpp  Game.h  GameCoordinator.cpp  GameCoordinator.h  GameServer.cpp  HTTPClient.cpp  HTTPClient.h  JWTVerifier.cpp  JWTVerifier.h  Metrics.h  RequestQueue.h  (+3 more)
includes/: jwt.h
js_terminal/: client.js  package-lock.json  package.json
lib/: rolly.ex  rolly_web.ex
nginx/: docker-compose.yml  nginx-certbot.env  rolly_cubes  rolly_cubes_beta  rolly_cubes_live  rolly_cubes_live_auth
physics_sim/: BulletConfig.cmake  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  bullet.pc  cmake_install.cmake
physics_sim/application/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  level.dae
physics_sim/application/src/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PhysicsSim  Simulator.cpp  cmake_install.cmake
physics_sim/application/src/lib/: CommonFileIOInterface.h  LoadMeshFromCollada.cpp  LoadMeshFromCollada.h  b3BulletDefaultFileIO.h  b3ResourcePath.h
physics_sim/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3Collision/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3Common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3Dynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3Geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3OpenCL/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/Bullet3Serialize/Bullet2FileLoader/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/BulletCollision/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/BulletDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/BulletInverseDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/BulletSoftBody/: CTestTestfile.cmake  Makefile  cmake_install.cmake
physics_sim/src/LinearMath/: CTestTestfile.cmake  Makefile  cmake_install.cmake
random/: .gitignore  Dockerfile  LICENSES  Makefile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh
scripts/: bad-day  codespace-setup  create-dev-keys  db_backup  gen-types  setup-dev-env  setup-nix
src/: API.cpp  API.h  AuthServerRequestQueue.cpp  AuthServerRequestQueue.h  Consts.h  Game.cpp  Game.h  Game.hpp  GameServer.cpp  JWTVerifier.cpp  JWTVerifier.h  Player.cpp  Player.h  Player.hpp  StringUtils.cpp  StringUtils.h  StringUtils.hpp
ssh-gateway/: .gitignore  Dockerfile  TODO.txt  docker-compose.yml  go.mod  go.sum  id_ed25519  id_ed25519.pub  main.go
stats/: simulation.js
systemctl/: dice.service  dice_auth.service  dice_beta.service
terminal/: client.py
terminal-client/: client.js  package-lock.json  package.json
test/: test_helper.exs
(+194 files in other folders)
