[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = [ "serde", "v4" ] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [ "with-uuid-1", "with-time-0_3" ]}
time = { version = "0.3.20", features = [ "serde", "std" ] }
refinery = { version = "0.8", features = ["tokio-postgres"]}
axum = { version = "0.6.16", features=[ "macros" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
# openssl-sys = { version = "0.9.86", features = [ "vendored" ] }
twitch_oauth2 = {version = "0.10", features = [ "reqwest" ] }
twitch_api = {version="0.7.0-rc.4", features=["helix", "reqwest", "twitch_oauth2", "client"] }
bb8-postgres = { version = "0.8.1", features = [ "with-uuid-1", "with-time-0_3" ]}
bb8 = "0.8.0"
jsonwebtoken = "8.3.0"
anyhow = "1.0.70"
tower-http = { version = "0.4.0", features = [ "cors", "catch-panic" ] }
lazy_static = "1.4.0"
tracing-log = "0.1.3"
