[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
refinery = { version = "0.8", features = ["tokio-postgres"]}
warp = "0.3"
