[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = [ "serde" ] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [ "with-uuid-1", "with-time-0_3" ]}
time = { version = "0.3.20", features = [ "serde" ] }
refinery = { version = "0.8", features = ["tokio-postgres"]}
axum = { version = "0.6.16", features=[ "macros" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
serde_json = "1.0"
